# core

./: .flake8  .gitignore  Pipfile  create_tables.sql  pyproject.toml
schema/graphql/: kicksonfire.json  sneakercrush.py
src/core/data/: __init__.py  enums.py  models.py
src/core/graphql/: get_sneakers.gql  sc_operations.py  sc_schema.json  sc_schema.py
src/core/models/: __init__.py  details.py  shoes.py  tokens.py
