[project]
name = "core"
version = "0.0.2"
authors = [
  { name="Peter Rauscher", email="peter@peterrauscher.com" },
]
description = "Core package for SoleSearch"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SoleSearch-Demos/core"
Issues = "https://github.com/SoleSearch-Demos/core/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]