[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "core"
dynamic = ["version"]
requires-python = ">=3.12"
description = "Core package for SoleSearch"
authors = [{ name = "Peter Rauscher", email = "peter@peterrauscher.com" }]
dependencies = ["SQLAlchemy"]

[tool.hatch.version]
path = "src/core/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/core"]
